--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,6 +95,7 @@ set(COMMON_SRC
 set(LOG_SRC
         src/log.cpp)
 set(CONFIG_SRC
+        src/config/args.cpp
         src/config/config.cpp
         src/config/scc_mode.cpp)
 set(SOURCE_LIST src/main.cpp
