[#23] Add file utils to common

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,7 @@ include_directories(include)
 set(PRJ_TARGET scc)
 
 set(COMMON_SRC
+        src/common/file_utils.cpp
         src/common/string_utils.cpp)
 set(LOG_SRC
         src/log.cpp)
