--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -2,16 +2,18 @@ name: 'Build test'
 
 on:
   push:
-    branches:
-    - main
-    - develop
   pull_request:
-    types: [opened, closed]
+    types:
+    - reopened
+    - ready_for_review
+    branches:
+      - main
+      - develop
   workflow_dispatch:
 
 jobs:
   build-linux:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     
@@ -22,7 +24,7 @@ jobs:
       run: cmake -S . -B build
       
     - name: Make
-      run: cd build/ && make
+      run: cd build && cmake --build .
       
     - name: Test
-      run: cd build/ && ctest
+      run: cd build && ctest
